# python-musicbrainzngs

./: .gitignore  .sourcery.yaml  .travis.yml  CHANGES  CONTRIBUTING.md  COPYING  MANIFEST  MANIFEST.in  README.md  README.rst  api.html  browse.py  genindex.html  index.html  installation.html  mbxml.py  musicbrainz.py  objects.inv  pyproject.toml  query.py  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.py  teste.py  tox.ini  usage.html
.github/: dependabot.yml
.github/workflows/: tests.yml
_static/: default.css
docs/: Makefile  api.rst  cache.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: browse.py  collection.py  find_disc.py  getentity.py  releasesearch.py
musicbrainzngs/: __init__.py  caa.py  cache.py  compat.py  mbxml.py  musicbrainz.py  query.py  util.py  version.py
test/: _common.py  test_browse.py  test_caa.py  test_cache.py  test_collection.py  test_getentity.py  test_mbxml.py  test_mbxml_artist.py  test_mbxml_collection.py  test_mbxml_discid.py  test_mbxml_event.py  test_mbxml_instrument.py  test_mbxml_label.py  test_mbxml_place.py  test_mbxml_recording.py  test_mbxml_release.py  test_mbxml_release_group.py  test_mbxml_search.py  test_mbxml_work.py  test_ratelimit.py  test_requests.py  test_search.py  test_submit.py
test/data/: search-artist.xml  search-event.xml  search-instrument.xml  search-label.xml  search-place.xml  search-recording.xml  search-release-group.xml  search-release.xml  search-work.xml
test/data/artist/: 0383dadf-2a4e-4d10-a46a-e9e041da8eb3-annotation.xml  (+3 more)
(+36 files in other folders)
